fixed overlay z-index issue

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -2195,6 +2195,7 @@ $partnav-width : 170px;
         .overlay {
             line-height: 1;
             position : absolute;
+            z-index: 100;
             // height : 673px;
             // width : 430px;
             top : -5px;
